[package]
name = "maplibre_native"
version = "0.1.0"
description = "Rust bindings to the MapLibre Native map rendering engine"
edition.workspace = true
license.workspace = true
rust-version = "1.81"

[features]
default = [] # automatically picks the platform-specific features
metal = [] # default on Apple platforms, do not add to default features
opengl = []
vulkan = []  # default on other platforms

[dependencies]
cxx = "1.0.138"
clap = { version = "4.5.27", features = ["derive", "env"] }

[dev-dependencies]
insta = { version = "1.42.1" }

[build-dependencies]
cmake = "0.1"
cxx-build = "1.0.138"
rustversion = "1.0.19"
walkdir = "2.5.0"

[lints]
workspace = true

[workspace.lints.rust]
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_panics_doc = "allow" # FIXME: remove

[workspace]
members = [
    "build_support",
    "."
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
