[package]
name = "maplibre_native"
version = "0.1.0"
description = "Rust bindings to the MapLibre Native map rendering engine"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/nyurik/maplibre-native-rs"
edition.workspace = true
license.workspace = true
keywords = ["maplibre", "rendering", "gis", "tiles"]
categories = ["external-ffi-bindings", "science::geo", "rendering"]
rust-version = "1.81"

[features]
default = [] # automatically picks the platform-specific features
metal = [] # default on Apple platforms, do not add to default features
opengl = []
vulkan = []  # default on other platforms

[dependencies]
cxx = "1.0.138"
clap = { version = "4.5.27", features = ["derive", "env"] }

[dev-dependencies]

[build-dependencies]
cmake = "0.1"
cxx-build = "1.0.138"
walkdir = "2.5.0"

[lints]
workspace = true

[workspace.lints.rust]
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_panics_doc = "allow" # FIXME: remove

[workspace]
members = [
    "build_tester",
    "."
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
