[package]
name = "maplibre_native"
version = "0.1.1"
description = "Rust bindings to the MapLibre Native map rendering engine"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/nyurik/maplibre-native-rs"
edition.workspace = true
license.workspace = true
keywords = ["maplibre", "rendering", "gis", "tiles"]
categories = ["external-ffi-bindings", "science::geo", "rendering"]
rust-version = "1.81"
exclude = ["maplibre-native/", ".gitmodules"]

[features]
default = [] # automatically picks the platform-specific features
metal = [] # default on Apple platforms, do not add to default features
opengl = []
vulkan = []  # default on other platforms

[dependencies]
cxx.workspace = true

[dev-dependencies]

[build-dependencies]
cmake.workspace = true
cxx-build.workspace = true
downloader.workspace = true
flate2.workspace = true
tar.workspace = true
walkdir.workspace = true

[lints]
workspace = true

##########################################################
##########################################################
####  Workspace configuration for the entire project  ####
##########################################################
##########################################################

[workspace]
members = [
    ".",
    "build_tester",
    "examples/*",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5.27", features = ["derive", "env", "unstable-markdown"] }
cmake = "0.1"
cxx = "1.0.138"
cxx-build = "1.0.138"
downloader = "0.2.8"
flate2 = "1.1.1"
maplibre_native = { path = ".", version = "0.1.0" }
tar = "0.4.44"
walkdir = "2.5.0"

[workspace.lints.rust]
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_panics_doc = "allow" # FIXME: remove
